Organization and Limit to time Dopamine

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<center>
-		<input type="button" name="confetti" value="Click-me" class="btnSuccess">
+		<input type="button" name="confetti" value="Click-ME" class="btnSuccess">
 	</center>
 </body>
 </html>
